--- a/.env_example
+++ b/.env_example
@@ -4,3 +4,211 @@ LETS_ENCRYPT_MAIL=root@domain.xyz
 LETS_ENCRYPT_DOMAINS=updns.domain.xyz
 # FQDN for updns services
 FQDN=updns.domain.xyz
+
+messages": [
+        [
+            "info",
+            "Domain name doesn't exist (NXDOMAIN): 4.7.d.2.0.e.4.0.2.0.a.2.ip6.arpa (A)"
+        ],
+        [
+            "info",
+            "Domain name doesn't exist (NXDOMAIN): 4.7.d.2.0.e.4.0.2.0.a.2.ip6.arpa (AAAA)"
+        ],
+        [
+            "info",
+            "Domain name doesn't exist (NXDOMAIN): 4.7.d.2.0.e.4.0.2.0.a.2.ip6.arpa (CNAME)"
+        ]
+    ],
+    "see_also": [],
+    "version": "0.3",
+    "data_call_name": "forward-dns",
+    "data_call_status": "supported",
+    "cached": false,
+    "data": {
+        "a_records": [],
+        "aaaa_records": [],
+        "cname_records": [],
+        "resource": "4.7.d.2.0.e.4.0.2.0.a.2.ip6.arpa",
+        "query_time": "2022-10-17T01:46:00",
+        "nameservers": [
+            "193.0.19.101",
+            "2001:67c:2e8:11::c100:1366",
+            "193.0.19.102",
+            "2001:67c:2e8:11::c100:1365"
+        ],
+        "authoritative_nameservers": [
+            "ns4.apnic.net",
+            "pri.authdns.ripe.net",
+            "ns3.lacnic.net",
+            "ns3.afrinic.net",
+            "rirns.arin.net"
+        ]
+    },
+    "query_id": "20221017014612-43105c4a-804e-4202-80d6-1dab16ab95e4",
+    "process_time": 39,
+    "server_id": "app137",
+    "build_version": "live.2022.9.19.119",
+    "status": "ok",
+    "status_code": 200,
+    "time": "2022-10-17T01:46:12.442445"
+}messages": [],
+    "see_also": [],
+    "version": "2.0",
+    "data_call_name": "atlas-targets",
+    "data_call_status": "supported",
+    "cached": false,
+    "data": {
+        "measurements": [],
+        "stats": {
+            "total": 0
+        },
+        "resource": "4.7.d.2.0.e.4.0.2.0.a.2.ip6.arpa",
+        "authenticated": true,
+        "cache": null
+    },
+    "query_id": "20221017014545-25b96e3e-6de8-4ad8-956f-aabd7f3dd5f9",
+    "process_time": 251,
+    "server_id": "app144",
+    "build_version": "live.2022.9.19.119",
+    "status": "ok",
+    "status_code": 200,
+    "time": "2022-10-17T01:45:45.813099"
+}{
+    "messages": [],
+    "see_also": [],
+    "version": "2.0",
+    "data_call_name": "atlas-targets",
+    "data_call_status": "supported",
+    "cached": false,
+    "data": {
+        "measurements": [
+            {
+                "af": 6,
+                "msm_id": 3807828,
+                "stop_time": 1463843409,
+                "start_time": 1463842951,
+                "dst_name": "www.turkcell.com.tr",
+                "dst_addr": "2a02:4e0:101:1101::14",
+                "dst_asn": 16135,
+                "status": {
+                    "name": "Failed",
+                    "id": 7,
+                    "when": 1463843409
+                },
+                "type": {
+                    "name": "sslcert"
+                },
+                "creation_time": 1463842951,
+                "description": "SSL (6): www.turkcell.com.tr",
+                "result": "https://atlas.ripe.net/api/v2/measurements/3807828/results/",
+                "is_public": true,
+                "participant_count": 1272
+            },
+            {
+                "af": 6,
+                "msm_id": 8425288,
+                "stop_time": 1493844309,
+                "start_time": 1493843994,
+                "dst_name": "www.turkcell.com.tr",
+                "dst_addr": "2a02:4e0:101:1101::14",
+                "dst_asn": null,
+                "status": {
+                    "name": "Failed",
+                    "id": 7,
+                    "when": 1493844309
+                },
+                "type": {
+                    "name": "traceroute"
+                },
+                "creation_time": 1493843994,
+                "description": "Traceroute measurement to www.turkcell.com.tr",
+                "result": "https://atlas.ripe.net/api/v2/measurements/8425288/results/",
+                "size": 48,
+                "is_public": true,
+                "participant_count": 1
+            },
+            {
+                "af": 6,
+                "msm_id": 8514187,
+                "stop_time": 1494117306,
+                "start_time": 1494116910,
+                "dst_name": "www.turkcell.com.tr",
+                "dst_addr": "2a02:4e0:101:1101::14",
+                "dst_asn": null,
+                "status": {
+                    "name": "Failed",
+                    "id": 7,
+                    "when": 1494117306
+                },
+                "type": {
+                    "name": "traceroute"
+                },
+                "creation_time": 1494116910,
+                "description": "Traceroute measurement to www.turkcell.com.tr",
+                "result": "https://atlas.ripe.net/api/v2/measurements/8514187/results/",
+                "size": 48,
+                "is_public": true,
+                "participant_count": 1
+            },
+            {
+                "af": 6,
+                "msm_id": 8584959,
+                "stop_time": 1494254106,
+                "start_time": 1494253724,
+                "dst_name": "www.turkcell.com.tr",
+                "dst_addr": "2a02:4e0:101:1101::14",
+                "dst_asn": null,
+                "status": {
+                    "name": "Stopped",
+                    "id": 4,
+                    "when": 1494254106
+                },
+                "type": {
+                    "name": "traceroute"
+                },
+                "creation_time": 1494253724,
+                "description": "Traceroute measurement to www.turkcell.com.tr",
+                "result": "https://atlas.ripe.net/api/v2/measurements/8584959/results/",
+                "size": 48,
+                "is_public": true,
+                "participant_count": 1
+            },
+            {
+                "af": 6,
+                "msm_id": 8665048,
+                "stop_time": 1494369906,
+                "start_time": 1494369452,
+                "dst_name": "www.turkcell.com.tr",
+                "dst_addr": "2a02:4e0:101:1101::14",
+                "dst_asn": null,
+                "status": {
+                    "name": "Stopped",
+                    "id": 4,
+                    "when": 1494369906
+                },
+                "type": {
+                    "name": "traceroute"
+                },
+                "creation_time": 1494369452,
+                "description": "Traceroute measurement to www.turkcell.com.tr",
+                "result": "https://atlas.ripe.net/api/v2/measurements/8665048/results/",
+                "size": 48,
+                "is_public": true,
+                "participant_count": 1
+            }
+        ],
+        "stats": {
+            "total": 5
+        },
+        "resource": "2a02:4e0::/32",
+        "authenticated": true,
+        "cache": null
+    },
+    "query_id": "20221017014802-9d625343-8f6e-49b7-b6ff-43bdad079a9a",
+    "process_time": 79,
+    "server_id": "app137",
+    "build_version": "live.2022.9.19.119",
+    "status": "ok",
+    "status_code": 200,
+    "time": "2022-10-17T01:48:02.531708"
+}
